@@ -1,3 +1,7 @@
+2021-01-03  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-06-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Upgrade to 'bionic' and R 4.0.0
